lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:18: error: too many arguments for method print: (x: Any)Unit
  	print(debut(0),fin(0))
             ^